Fixed Review page alignment issues, added brighten to home image

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,8 @@ p {
 /* Profile Images */
 .profile2 img {
   text-align: center;
+  -webkit-filter: brightness(100%);
+  transition: 1s ease;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -53,6 +55,11 @@ p {
   width: 20em;
   /*250px*/
   border-radius: 10%;
+}
+
+.profile2 img:hover {
+  -webkit-filter: brightness(220%);
+  transition: 1s ease;
 }
 
 /*
@@ -66,17 +73,30 @@ p {
   border-radius: 10%;
 }
 */
-/* Flex Box */
-section {
-  display: flex;
+/* Reviews */
+.review-left {
+  float: left;
+  position: relative;
+  left: 51%;
+  max-width: 80%;
 }
 
-aside {
-  flex: 1
+.review-right {
+  float: right;
+  position: relative;
+  right: 51%;
+  max-width: 80%;
 }
 
-article {
-  flex: 1
+.review p {
+  max-width: 80%;
+}
+
+.flex-container {
+  display: block;
+  max-width: 500px;
+  vertical-align: middle;
+  margin-top: 30px;
 }
 
 /* Return to Landing Page Button */
@@ -122,6 +142,13 @@ footer {
 }
 
 /*Media Queries*/
+@media (max-width: 1020px) {
+  .flex-container {
+    display: block;
+    max-width: 400px;
+  }
+}
+
 /*990px width is when bootstrap bar constricts*/
 @media (max-width: 990px) {
   .bg-dark li a:hover {
@@ -129,5 +156,19 @@ footer {
     background-color: #343a40;
     padding-left: 10px;
     margin-left: 10px;
+  }
+}
+
+@media (max-width: 820px) {
+  .review-left {
+    float: none;
+    left: auto;
+    margin: auto;
+  }
+
+  .review-right {
+    float: none;
+    margin: auto;
+    right: auto;
   }
 }
